fix horizontal overflow issue

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-body {
-  margin: 0px;
+html, body {
+  overflow-x: hidden;
+  position: relative;
   font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -67,7 +68,7 @@ a {
 }
 
 #jaar {
-  position: absolute;
+  position: fixed;
   top: 0;
   font-size: 300px;
   font-weight: 500;
@@ -76,7 +77,7 @@ a {
 }
 
 #introduction {
-  position: absolute;
+  position: fixed;
   bottom: 100px;
   right: 100px;
   width: 40%;
@@ -147,7 +148,7 @@ a {
 
 /* index.html */
 .item {
-  position: absolute;
+  position: fixed;
   top: 250px;
   left: 250px;
   width: 200px;
@@ -158,6 +159,15 @@ a {
   /* Animate along the path */
   animation: move-on-path 30s linear infinite;
   z-index: 10;
+}
+
+.item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  /* Center the image on the path line */
+  transform: translate(-50%, -50%);
 }
 
 /* Pause the entire container rotation when hovering any image */
